[package]
name = "telegram-giftcard-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
acidjson = "0.1.3"
argh = "0.1.12"
log = "0.4.20"
once_cell = "1.18.0"
rand = "0.8.5"
serde = {version="1.0.188", features=["derive"]}
serde_json = "1.0.105"
serde_yaml = "0.9.25"
smol = "1.3.0"
smol-timeout = "0.6.0"
smolscale = "0.4"
telegram-bot = {git = "https://github.com/geph-official/telegram-bot.git"}
reqwest = {version="0.12.15", features=["json"]}
async-compat = "0.2.4"
