[package]
name = "telegram-giftcard-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
acidjson = "0.1.3"
argh = "0.1.12"
once_cell = "1.18.0"
serde = {version="1.0.188", features=["derive"]}
serde_json = "1.0.105"
serde_yaml = "0.9.25"
reqwest = {version="0.12.15", features=["json"]}
teloxide = "0.13"
tokio = {version = "1.41", features = ["macros", "rt-multi-thread"]}
